<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:layout_marginBottom="200dp"
        android:text="@string/welcome_title"
        android:textColor="@color/shadow"
        android:textSize="30sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="200dp"
        android:text="@string/sign_in_title"
        android:textColor="@color/crazy_pink"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="130dp"
        android:orientation="vertical">

        <EditText
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:id="@+id/etEmail"
            android:hint="@string/email_hint"
            android:textColor="@color/crazy_pink"
            android:inputType="textEmailSubject"
            android:autofillHints="">

        </EditText>

        <EditText
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:id="@+id/etPassword"
            android:hint="@string/password_hint"
            android:textColor="@color/crazy_pink"
            android:inputType="textPassword|textEmailSubject"
            android:autofillHints="">

        </EditText>

    </LinearLayout>

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="280dp"
        android:gravity="center"
        android:text="@string/sign_in_txt_btn"
        android:textSize="18sp"
        android:onClick="login"
        android:textColor="@color/white"
        android:background="@drawable/round_btn">
    </Button>

    <TextView
        android:id="@+id/createLink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="360dp"
        android:onClick="register"
        android:gravity="center"
        android:text="@string/create_account_txt_link"
        android:textSize="18sp"
        android:textColor="@color/crazy_pink">

    </TextView>


</RelativeLayout>