<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="200dp"
        android:text="@string/sign_up_title"
        android:textColor="@color/crazy_pink"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="120dp"
        android:orientation="vertical">

        <EditText
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:id="@+id/etEmail"
            android:hint="@string/email_hint"
            android:textColor="@color/crazy_pink"
            android:inputType="textPersonName"
            tools:ignore="TextFields"
            android:autofillHints="">

        </EditText>

        <EditText
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:id="@+id/etPassword"
            android:hint="@string/password_hint"
            android:textColor="@color/crazy_pink"
            android:inputType="textEmailAddress"
            tools:ignore="TextFields"
            android:autofillHints="">

        </EditText>

        <EditText
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:id="@+id/etReenterPassword"
            android:hint="@string/re_enter_password_hint"
            android:textColor="@color/crazy_pink"
            android:inputType="textPassword">

        </EditText>

    </LinearLayout>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="340dp"
        android:gravity="center"
        android:onClick="save"
        android:text="@string/create_account_txt_btn"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:background="@drawable/round_btn">
    </Button>

    <TextView
        android:id="@+id/loginLink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="420dp"
        android:gravity="center"
        android:onClick="login"

        android:text="@string/login_txt_link"
        android:textSize="18sp"
        android:textColor="@color/crazy_pink">

    </TextView>


</RelativeLayout>