<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".Success">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="134dp"
        android:layout_marginEnd="133dp"
        android:layout_marginBottom="352dp"
        android:text="@string/connected_with_spotify"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/loginBtn"
        android:layout_width="220dp"
        android:layout_height="44dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="52dp"
        android:background="@drawable/bio_btn"
        android:gravity="center"
        android:text="@string/Bio"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"></TextView>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="72dp"
        android:layout_height="65dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toStartOf="@+id/loginBtn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/placeholder_img"
        tools:ignore="ImageContrastCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>