<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_forUser"
    tools:context=".UserPage">


<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserPage"
    android:fillViewport="true" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg"
        >

        <include
            layout="@layout/tool_bar"
            />

        <TextView
            android:id="@+id/playView"
            android:layout_width="260dp"
            android:layout_height="140dp"
            android:layout_marginStart="90dp"
            android:layout_marginTop="150dp"
            android:layout_marginEnd="90dp"
            android:background="@drawable/bio_block"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_shake_for_song"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/title_string_1"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/playView" />


        <TextView
            android:id="@+id/text_playlist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/title_string_2"
            android:textColor="#FFFFFF"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_shake_for_song" />

        <TextView
            android:id="@+id/text_chill_vibes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="250dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/title_string_3"
            android:textColor="#FFFFFF"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_playlist" />

        <ImageButton
            android:id="@+id/chill_vibes_img_btn1"
            android:onClick="chillvibes_btn1"
            android:layout_width="90sp"
            android:layout_height="90sp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="260dp"
            android:background="@drawable/img_btn_playlist"
            android:clipToOutline="true"
            android:scaleType="fitCenter"
            android:src="@drawable/chill_vibes_btn_img_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_chill_vibes"
            tools:ignore="ContentDescription,SpeakableTextPresentCheck,UsingOnClickInXml">

        </ImageButton>

        <ImageButton
            android:id="@+id/chill_vibes_img_btn2"
            android:onClick="chillvibes_btn2"
            android:layout_width="90sp"
            android:layout_height="90sp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/img_btn_playlist"
            android:clipToOutline="true"
            android:scaleType="fitCenter"
            android:src="@drawable/chill_vibes_btn_img_2"
            app:layout_constraintStart_toEndOf="@+id/chill_vibes_img_btn1"
            app:layout_constraintTop_toBottomOf="@+id/text_chill_vibes"
            tools:ignore="ContentDescription,SpeakableTextPresentCheck,ImageContrastCheck,ImageContrastCheck" />

        <ImageButton
            android:id="@+id/chill_vibes_img_btn3"
            android:onClick="chillvibes_btn3"
            android:layout_width="90sp"
            android:layout_height="90sp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/img_btn_playlist"
            android:clipToOutline="true"
            android:scaleType="fitCenter"
            android:src="@drawable/chill_vibes_btn_img_3"
            app:layout_constraintStart_toEndOf="@+id/chill_vibes_img_btn2"
            app:layout_constraintTop_toBottomOf="@+id/text_chill_vibes"
            tools:ignore="ContentDescription,SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/text_sad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="165dp"
            android:layout_marginEnd="310dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/title_string_4"
            android:textColor="#FFFFFF"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_chill_vibes" />

        <ImageButton
            android:id="@+id/sad_img_btn1"
            android:onClick="sad_btn1"
            android:layout_width="90sp"
            android:layout_height="90sp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="260dp"
            android:background="@drawable/img_btn_playlist"
            android:clipToOutline="true"
            android:scaleType="fitCenter"
            android:src="@drawable/sad_btn_img_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_sad"
            tools:ignore="ContentDescription,SpeakableTextPresentCheck,ImageContrastCheck">

        </ImageButton>

        <ImageButton
            android:id="@+id/sad_img_btn2"
            android:onClick="sad_btn2"
            android:layout_width="90sp"
            android:layout_height="90sp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/img_btn_playlist"
            android:clipToOutline="true"
            android:scaleType="fitCenter"
            android:src="@drawable/sad_btn_img_2"
            app:layout_constraintStart_toEndOf="@+id/chill_vibes_img_btn1"
            app:layout_constraintTop_toBottomOf="@+id/text_sad"
            tools:ignore="ContentDescription,SpeakableTextPresentCheck" />

        <ImageButton
            android:id="@+id/sad_img_btn3"
            android:onClick="sad_btn3"
            android:layout_width="90sp"
            android:layout_height="90sp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/img_btn_playlist"
            android:clipToOutline="true"
            android:scaleType="fitCenter"
            android:src="@drawable/sad_btn_img_3"
            app:layout_constraintStart_toEndOf="@+id/chill_vibes_img_btn2"
            app:layout_constraintTop_toBottomOf="@+id/text_sad"
            tools:ignore="ContentDescription,SpeakableTextPresentCheck,ImageContrastCheck" />

        <TextView
            android:id="@+id/text_workout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="165dp"
            android:layout_marginEnd="260dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/title_string_5"
            android:textColor="#FFFFFF"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_sad" />

        <ImageButton
            android:id="@+id/work_img_btn1"
            android:onClick="workout_btn1"
            android:layout_width="90sp"
            android:layout_height="90sp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="260dp"
            android:background="@drawable/img_btn_playlist"
            tools:ignore="ContentDescription"
            android:scaleType="fitCenter"
            android:src="@drawable/workout_btn_img_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_workout"
            android:clipToOutline="true">

        </ImageButton>

        <ImageButton
            android:id="@+id/workout_img_btn2"
            android:onClick="workout_btn2"
            android:layout_width="90sp"
            android:layout_height="90sp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/img_btn_playlist"
            android:clipToOutline="true"
            android:scaleType="fitCenter"
            android:src="@drawable/workout_btn_img_2"
            app:layout_constraintStart_toEndOf="@+id/chill_vibes_img_btn1"
            app:layout_constraintTop_toBottomOf="@+id/text_workout"
            tools:ignore="ContentDescription,SpeakableTextPresentCheck">
        </ImageButton>

        <ImageButton
            android:id="@+id/workout_img_btn3"
            android:onClick="workout_btn3"
            android:layout_width="90sp"
            android:layout_height="90sp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/img_btn_playlist"
            android:clipToOutline="true"
            tools:ignore="ContentDescription"
            android:scaleType="fitCenter"
            android:src="@drawable/workout_btn_img_3"
            app:layout_constraintStart_toEndOf="@+id/chill_vibes_img_btn2"
            app:layout_constraintTop_toBottomOf="@+id/text_workout">
        </ImageButton>

        <TextView
            android:id="@+id/text_med"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="165dp"
            android:layout_marginEnd="250dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/title_string_6"
            android:textColor="#FFFFFF"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_workout" />

        <ImageButton
            android:id="@+id/med_img_btn1"
            android:onClick="med_btn1"
            android:layout_width="90sp"
            android:layout_height="90sp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="260dp"
            android:background="@drawable/img_btn_playlist"
            tools:ignore="ContentDescription"
            android:scaleType="fitCenter"
            android:src="@drawable/med_btn_img_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_med"
            android:clipToOutline="true">

        </ImageButton>

        <ImageButton
            android:id="@+id/med_img_btn2"
            android:onClick="med_btn2"
            android:layout_width="90sp"
            android:layout_height="90sp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/img_btn_playlist"
            android:clipToOutline="true"
            tools:ignore="ContentDescription"
            android:scaleType="fitCenter"
            android:src="@drawable/med_btn_img_2"
            app:layout_constraintStart_toEndOf="@+id/chill_vibes_img_btn1"
            app:layout_constraintTop_toBottomOf="@+id/text_med">
        </ImageButton>

        <ImageButton
            android:id="@+id/med_img_btn3"
            android:onClick="med_btn3"
            android:layout_width="90sp"
            android:layout_height="90sp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/img_btn_playlist"
            android:clipToOutline="true"
            tools:ignore="ContentDescription"
            android:scaleType="fitCenter"
            android:src="@drawable/med_btn_img_3"
            app:layout_constraintStart_toEndOf="@+id/chill_vibes_img_btn2"
            app:layout_constraintTop_toBottomOf="@+id/text_med">
        </ImageButton>

        <TextView
            android:id="@+id/text_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="160dp"
            android:layout_marginEnd="270dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/title_string_7"
            android:textColor="#FFFFFF"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_med" />

        <ImageButton
            android:id="@+id/game_img_btn1"
            android:onClick="gaming_btn1"
            android:layout_width="90sp"
            android:layout_height="90sp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="260dp"
            android:background="@drawable/img_btn_playlist"
            tools:ignore="ContentDescription"
            android:scaleType="fitCenter"
            android:src="@drawable/game_btn_img_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_game"
            android:clipToOutline="true">

        </ImageButton>

        <ImageButton
            android:id="@+id/game_img_btn2"
            android:onClick="gaming_btn2"
            android:layout_width="90sp"
            android:layout_height="90sp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/img_btn_playlist"
            android:clipToOutline="true"
            tools:ignore="ContentDescription"
            android:scaleType="fitCenter"
            android:src="@drawable/game_btn_img_2"
            app:layout_constraintStart_toEndOf="@+id/chill_vibes_img_btn1"
            app:layout_constraintTop_toBottomOf="@+id/text_game">
        </ImageButton>

        <ImageButton
            android:id="@+id/game_img_btn3"
            android:onClick="gaming_btn3"
            android:layout_width="90sp"
            android:layout_height="90sp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/img_btn_playlist"
            android:clipToOutline="true"
            tools:ignore="ContentDescription"
            android:scaleType="fitCenter"
            android:src="@drawable/game_btn_img_3"
            app:layout_constraintStart_toEndOf="@+id/chill_vibes_img_btn2"
            app:layout_constraintTop_toBottomOf="@+id/text_game">
        </ImageButton>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/white">

        <include
            layout="@layout/drawer_layout"/>
    </RelativeLayout>

</androidx.drawerlayout.widget.DrawerLayout>